@@ -25,7 +25,7 @@
 #include "sg_lib.h"
 
 
-static const char * version_str = "1.05 20140110";
+static const char * version_str = "1.06 20140117";
 
 #define MAX_SENSE_LEN 1024 /* max descriptor format actually: 256+8 */
 
@@ -58,6 +58,8 @@ struct opts_t {
     const char * no_space_str;
     int sense_len;
 };
+
+static char concat_buff[1024];
 
 
 static void
@@ -173,13 +175,26 @@ process_cl(struct opts_t *optsp, int argc, char *argv[])
         opt = argv[optind++];
         if (optsp->no_space) {
             if (optsp->no_space_str) {
-                fprintf(stderr, "With '--nospace' only want a single string "
-                        "of hex digits, extra: '%s'\n", opt);
-                return SG_LIB_SYNTAX_ERROR;
-            } else {
+                if ('\0' == concat_buff[0]) {
+                    if (strlen(optsp->no_space_str) > sizeof(concat_buff)) {
+                        fprintf(stderr, "'--nospace' concat_buff overflow\n");
+                        return SG_LIB_SYNTAX_ERROR;
+                    }
+                    strcpy(concat_buff, optsp->no_space_str);
+                }
+                if ((strlen(concat_buff) + strlen(opt)) >=
+                    sizeof(concat_buff)) {
+                    fprintf(stderr, "'--nospace' concat_buff overflow\n");
+                    return SG_LIB_SYNTAX_ERROR;
+                }
+                if (optsp->do_version)
+                    fprintf(stderr, "'--nospace' and found whitespace so "
+                            "concatenate\n");
+                strcat(concat_buff, opt);
+                optsp->no_space_str = concat_buff;
+            } else
                 optsp->no_space_str = opt;
-                continue;
-            }
+            continue;
         }
         val = strtol(opt, &endptr, 16);
         if (*opt == '\0' || *endptr != '\0' || val < 0x00 || val > 0xff) {
@@ -404,6 +419,8 @@ main(int argc, char *argv[])
     }
 
     if ((0 == opts.sense_len) && opts.no_space_str) {
+        if (opts.do_verbose > 2)
+            fprintf(stderr, "no_space str: %s\n", opts.no_space_str);
         cp = opts.no_space_str;
         for (k = 0; isxdigit(cp[k]) && isxdigit(cp[k + 1]); k += 2) {
             if (1 != sscanf(cp + k, "%2x", &ui)) {
