@@ -2,7 +2,7 @@ sg3-utils (1.38-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Sun, 05 Jan 2014 01:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 17 Jan 2014 15:00:00 -0500
 
 sg3-utils (1.37-0.1) unstable; urgency=low
 
